# cmn-CommonObjects

./: .gitignore  LICENSE  README.md
cmakemacro/: cmake_macro_setvariables.txt
commonobjects/enum/: enum_helper.hpp
commonobjects/io/: CalibrationPointsIO.hpp  PCLViewerIONaive.hpp  RGBDData.hpp  RGBDReader.hpp  RGBDRecorder.hpp  RGBDWriter.hpp
commonobjects/random/: StringGenerator.hpp
commonobjects/sanity/: sanity.hpp
commonobjects/shm_common/: SharedDataBase.hpp  SharedDataDerivedSample.hpp  SharedDataDerivedSyncSample.hpp  SharedDataStructure.hpp  SharedPCClient.hpp  SharedPCServer.hpp  concurrent_queue.hpp  doc_managedmemory_shared_data_base.hpp  doc_managedmemory_shared_data_v2.hpp  doc_managedmemory_shared_data_v3.hpp
commonobjects/string_common/: StringOp.hpp  StringTypeConversion.hpp
commonobjects/time/: DateTime.hpp
configure/win/: 0. configure.bat  0. configure_global_path.bat  1. create_and_build_slns (delete).bat  1. create_and_build_slns VS2019 (delete).bat  1. create_and_build_slns.bat  1. create_slns VS2019.bat  1. create_slns VS2022.bat  1. create_slns.bat  1. create_slns_list.bat  2. build_slns VS2019.bat  2. build_slns VS2022.bat  2. build_slns.bat  2. build_slns_list.bat  900. clear cache.bat  build_result.txt  buildlist.txt  configure.bat  createlist.txt
doc/: CommonObjects.html
sample/: CMakeLists.txt  create_sln.bat  readme.txt
sample/code/: CMakeLists.txt  enum_enum_helper.cpp  io_calibrationpointsio.cpp  io_pclviewerionaive.cpp  io_rgbd.cpp  random_StringGenerator.cpp  sanity_sanity.cpp  shm_common_SharedDataDerivedSampleClient.cpp  shm_common_SharedDataDerivedSampleServer.cpp  shm_common_SharedPCClient.cpp  shm_common_SharedPCServer.cpp  string_common_StringOp.cpp  string_common_StringTypeConversion.cpp
